# coursework_4

./: README.md  pyproject.toml
src/: currency_converter_erapi.py  head_hunter_api.py  headhunterapi.py  json_saver.py  main.py  parser.py  utils.py  vacancy.py  vacancy_saver.py
tests/: conftest.py  test_currency_converter_erapi.py  test_head_hunter_api.py  test_json_saver.py  test_utils.py  test_vacancy.py
